[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris-game"
version = "1.0.0"
description = "A classic Tetris game implementation in Python using Pygame"
readme = "README.md"
authors = [
    {name = "lukaszplk", email = "lpolowski@protonmail.com"}
]
license = "MIT"
keywords = ["tetris", "game", "pygame", "arcade"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Arcade",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "pygame>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/lukaszplk/tetris"
Repository = "https://github.com/lukaszplk/tetris"
Issues = "https://github.com/lukaszplk/tetris/issues"

[project.scripts]
tetris = "tetris_game.tetris:start_game"

[tool.setuptools.packages.find]
where = ["."]
include = ["tetris_game*"]
